improve api return object
